--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,20 @@
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
   "editor.lineHeight": 21,
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "tailwindCSS.classAttributes": [
+    // Default
+    "class",
+    "className",
+
+    // Additional Tailwind CSS Intellisense for Transition API from Headless UI
+    // https://headlessui.com/react/transition#component-api
+    "enter",
+    "enterFrom",
+    "enterTo",
+    "entered",
+    "leave",
+    "leaveFrom",
+    "leaveTo"
+  ]
 }
