--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "redux-persist": "^6.0.0",
+    "tailwind-merge": "^1.13.2",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
