feat: add packages and set up shadcn-ui

--- a/.prettierrc
+++ b/.prettierrc
@@ -22,5 +22,6 @@
       }
     }
   ],
-  "organizeImportsSkipDestructiveCodeActions": true
+  "organizeImportsSkipDestructiveCodeActions": true,
+  "tailwindFunctions": ["clsx", "cva"]
 }
